INT: fixed popup height overflow problem

--- a/styles/components/_popup.scss
+++ b/styles/components/_popup.scss
@@ -7,6 +7,7 @@
         {
             display: block;
             max-height: 50dvh;
+            overflow: hidden;
 
             &[popover]:not(:popover-open):not(dialog[open])
             {
